[package]
name = "october"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
axum = "0.3.2"
hyper = "0.14.13"
tower-http = { version = "0.1", features = ["fs", "trace"] }
structopt = "0.3.23"
handlebars = "4.1.3"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3.1"
macaddr = { version = "1.0.1", features = ["serde_std"] }
lazy_static = "1.3.0"
csv = "1.1.6"

[profile.release]
lto = true
codegen-units = 1